--- a/projeto/style.css
+++ b/projeto/style.css
@@ -26,6 +26,7 @@
    body{
     /* background: color image repeat position/size */
     background: var(--bg-url) no-repeat top center/cover;
+    min-height: 100vh;
   }
 
   body *{
@@ -34,7 +35,8 @@
   }
 
   #container{
-    width: 320px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px;
   }
@@ -155,4 +157,13 @@
     padding: 24px 0;
     font-size: 14px;
     text-align: center;
+  }
+
+  @media (min-width: 700px){
+    :root{
+      --bg-url:url(../assets/bg-desktop.jpg);
+    }
+    .light{
+      --bg-url:url(../assets/bg-desktop-light.jpg);
+    }
   }
